<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:clipToPadding="false"
        android:paddingBottom="16dp">

        <alc.ugadining.DiningHallCardView
            android:id="@+id/main_bolton_card"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/main_oglethorpe_card"
            app:layout_constraintTop_toTopOf="parent"
            custom:icon="@drawable/imageholder"
            custom:title="@string/bolton" />

        <alc.ugadining.DiningHallCardView
            android:id="@+id/main_oglethorpe_card"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toRightOf="@id/main_bolton_card"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            custom:icon="@drawable/imageholder"
            custom:title="@string/oglethorpe" />

        <alc.ugadining.DiningHallCardView
            android:id="@+id/main_niche_card"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/main_snelling_card"
            app:layout_constraintTop_toBottomOf="@id/main_bolton_card"
            custom:icon="@drawable/imageholder"
            custom:title="@string/niche" />

        <alc.ugadining.DiningHallCardView
            android:id="@+id/main_snelling_card"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toRightOf="@id/main_niche_card"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_oglethorpe_card"
            custom:icon="@drawable/imageholder"
            custom:title="@string/snelling" />
        
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/main_village_card_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="main_niche_card, main_snelling_card"/>

        <alc.ugadining.DiningHallCardView
            android:id="@+id/main_village_card"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_village_card_barrier"
            custom:icon="@drawable/imageholder"
            custom:title="@string/village" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
